# myco

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
context/: claude_convo.md
crates/myco-cli/: Cargo.toml
crates/myco-core/: Cargo.toml
crates/myco-py/: Cargo.toml
docs/: end_to_end_walkthrough.md
examples/: diagnostics_demo.py  explain_tiny_tree.py  spec_file_demo.py  tiny_tree_demo.py  tiny_tree_spec.json  train_tiny_tree_controller.py
planning/: soul.md
planning/og_context/: gpt_pro_review.md  proposal_markdown.md
planning/v1/: WORKFLOW_STATE.md  end_to_end_walkthrough.md  implementation_plan.md  spec.md  v1_1_items_needed_for_spec_parity.md  v1_2_items_needed_after_egg_rollout.md  v1_3_pre_v2_and_real_model_fixes.md
planning/v2/: README.md  anti_spec.md  charter.md  convo_backup.md  deferred_review_findings.md  domain_architecture_amendment.md  ideas.md  mock_potkay.myco  mock_sperry.myco  myco_ozzydb_shared_type_system_vision.md  node_first_ownership_and_relationships.md  open_questions.md  open_questions_deprecated_use_spec_new.md  riley_project_note.md  riley_spec_notes.txt  sparse_multi_context_training_notes.md  spec.md  spec_dev_notes.md  spec_new.md  spec_review.md  spec_verif_and_cleanup.md  units_and_dimensions_notes.md  v2.1_in_progress.md  v2_do_this_first.md  v2_do_this_first_implementation_plan.md
scripts/: spec_index.py  spec_roles.py  spec_section.py  spec_verify.py
src/: diagnostics.rs  equality.rs  lib.rs  main.rs  semantic.rs  syntax.rs
tests/: test_myco_py.py  test_training_demo.py
website/: index.html
(+112 files in other folders)
